change step name [skip ci]

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -20,7 +20,7 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r test.requirements.txt
           pip install -r requirements.txt
-      - name: Install
+      - name: Test install
         run: |
           python setup.py install
           tfc --help
