--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -7,23 +7,23 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.9", "3.10"]
+        go-version: ["1.19"]
 
     steps:
       - uses: actions/checkout@v3
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v4
+      - name: Set up Go ${{ matrix.go-version }}
+        uses: actions/setup-go@v2
         with:
-          python-version: ${{ matrix.python-version }}
+          go-version: ${{ matrix.go-version }}
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          pip install -r test.requirements.txt
-          pip install -r requirements.txt
-      - name: Pytest
+          go get -v ./...
+      - name: Unit tests
         run: |
-          pytest -v
-      - name: Install test
+          go test -v ./...
+      - name: Build arm64 mac
+        env:
+          GOOS: darwin
+          GOARCH: arm64
         run: |
-          python setup.py install
-          tfc --help
+          go build -o bin/tfc
