--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -27,3 +27,13 @@ jobs:
           GOARCH: arm64
         run: |
           go build -o bin/tfc
+      - name: Build amd64 mac
+        env:
+          GOOS: darwin
+          GOARCH: amd64
+        run: |
+          go build -o bin/tfc
+      - name: Test help
+        run: |
+          go build -o bin/tfc
+          bin/tfc --help
