--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -27,14 +27,6 @@ jobs:
           tag_name: ${{ steps.create_tag.outputs.tag }}
           release_name: ${{ steps.create_tag.outputs.tag }}
           draft: true
-      - name: Set up Go
-        uses: actions/setup-go@v2
-        with:
-          go-version: 1.19
-          prerelease: false
-      - name: Build artifacts
-        run: |
-          bash scripts/build/build_and_zip_all.sh
 
   upload_assets:
     needs:
@@ -45,11 +37,25 @@ jobs:
         arch: [amd64, arm64]
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/upload-release-asset@v1.0.1
+      - uses: actions/checkout@v3
+      - name: Set up Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: 1.19
+          prerelease: false
+      - name: Build
+        run: |
+          go build -o tfc
+          zip ${{ matrix.os }}-${{ matrix.arch }}.zip tfc
+          rm -f tfc
+        env:
+          GOOS: ${{ matrix.os }}
+          GOARCH: ${{ matrix.arch }}
+      - uses: actions/upload-release-asset@v1.0.2
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ needs.release.outputs.upload_url }}
-          asset_path: ./artifacts/${{ matrix.os }}-${{ matrix.arch }}.zip
+          asset_path: ./${{ matrix.os }}-${{ matrix.arch }}.zip
           asset_name: ${{ matrix.os }}-${{ matrix.arch }}.zip
           asset_content_type: application/zip
