--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -3,7 +3,7 @@ name: Tests
 on:
   push:
     paths-ignore:
-      - ".github/workflows"
+      - ".github/workflows/**"
       - "README.md"
 
 jobs:
